@@ -1,10 +1,12 @@
-CHANGES - 2010-11-07
+CHANGES - 2010-11-08
 --------------------
 
 CHANGES IN Mini-XML 2.7
 
 	- Updated the source headers to reference the Mini-XML license and its
 	  exceptions to the LGPL2 (STR #108)
+      	- Added a new mxmlFindValue() function to find the value node of a
+	  named element (STR #110)
 	- Building a static version of the library did not work on Windows
 	  (STR #112)
 	- The shared library did not include a destructor for the thread-
